--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -16,6 +16,8 @@
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.0.1",
+    "lucide-react": "^0.482.0",
+    "lucide-react-native": "^0.482.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0"
