--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.3",
+    "cloudinary": "^2.6.0",
     "expo": "~52.0.38",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.6",
@@ -20,7 +21,8 @@
     "lucide-react-native": "^0.482.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-safe-area-context": "^5.3.0"
+    "react-native-safe-area-context": "^5.3.0",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
