--- a/frontend/my-app/app.json
+++ b/frontend/my-app/app.json
@@ -19,10 +19,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.myapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "permissions": [
+      "CAMERA"
+    ],
+    "plugins": [
+      "react-native-vision-camera"
+    ]
   }
 }
