--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,18 +14,22 @@
     "axios": "^1.8.3",
     "cloudinary": "^2.6.0",
     "expo": "~52.0.38",
+    "expo-camera": "^16.0.18",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.6",
+    "expo-modules-core": "~2.2.3",
     "expo-status-bar": "~2.0.1",
     "lucide-react": "^0.482.0",
     "lucide-react-native": "^0.482.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-camera": "^4.2.1",
     "react-native-safe-area-context": "^5.3.0",
-    "expo-camera": "~16.0.18"
+    "react-native-vision-camera": "^4.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.0.4"
   },
   "private": true
 }
