--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -24,8 +24,12 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-camera": "^4.2.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.20.1",
+    "react-native-permissions": "^5.3.0",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-vision-camera": "^4.6.4"
+    "react-native-vision-camera": "^4.6.4",
+    "expo-dev-client": "~5.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
