admin bug fixes, sends email when approved and map routing for car trail one  implemented

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ CLOUD_API_KEY=747614898528776
 CLOUD_API_SECRET=O8GermHWmVUV8YAT6BPtp_a_VSA
 port=5000
 FRONTEND_URL=http://192.168.100.88:5000
+EMAIL_USER=amybishara847@gmail.com
+EMAIL_PASS=bndt qpnx mrnb efvs
