--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -9,27 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.3",
     "cloudinary": "^2.6.0",
-    "expo": "~52.0.38",
-    "expo-camera": "^16.0.18",
+    "expo": "^52.0.41",
+    "expo-camera": "~16.0.18",
+    "expo-dev-client": "~5.0.14",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.6",
-    "expo-modules-core": "~2.2.3",
+    "expo-location": "^18.0.8",
     "expo-status-bar": "~2.0.1",
     "lucide-react": "^0.482.0",
     "lucide-react-native": "^0.482.0",
+    "nodemailer": "^6.10.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-camera": "^4.2.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-maps": "^1.20.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^5.3.0",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-vision-camera": "^4.6.4",
-    "expo-dev-client": "~5.0.14"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-vision-camera": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
